@@ -4,13 +4,14 @@
  */
 
 
-
 // Check for cache directory path creation, create if needed...if it fails, flag a force exit and alert end-user
+
 if ( dir_structure('cache/alerts/') != true
 || dir_structure('cache/charts/spot_price_24hr_volume/archival/') != true
 || dir_structure('cache/charts/spot_price_24hr_volume/lite/') != true
 || dir_structure('cache/charts/system/archival/') != true
 || dir_structure('cache/charts/system/lite/') != true
+|| dir_structure('cache/events/lite_chart_rebuilds/') != true
 || dir_structure('cache/events/throttling/') != true
 || dir_structure('cache/internal-api/') != true
 || dir_structure('cache/logs/debugging/external_api/') != true
@@ -26,7 +27,6 @@ app_logging('system_error', $system_error);
 echo $system_error;
 $force_exit = 1;
 }
-
   
  
- ?>
+?>
