@@ -3709,7 +3709,9 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.14.9:
 
--Minor bug fixes / code cleanup
+-Bug fix for "all" time period lite charts (now they dynamically prune every 6 to 12 hours)
+
+-Minor misc bug fixes / code cleanup
 
 IMPORTANT UPGRADE NOTES: 
 
